RESOLVED FIXED 150322
Fix the !ENABLE(CSS_GRID_LAYOUT) build after r190840
https://bugs.webkit.org/show_bug.cgi?id=150322
Summary Fix the !ENABLE(CSS_GRID_LAYOUT) build after r190840
Csaba Osztrogonác
Reported 2015-10-19 03:50:12 PDT
https://trac.webkit.org/changeset/190840 broke the !ENABLE(CSS_GRID_LAYOUT) build: ../../Source/WebCore/html/HTMLDetailsElement.cpp: In function 'const WTF::AtomicString& WebCore::summarySlotName()': ../../Source/WebCore/html/HTMLDetailsElement.cpp:43:52: error: variable 'WTF::NeverDestroyed<WTF::AtomicString> summarySlot' has initializer but incomplete type ../../Source/WebCore/html/HTMLDetailsElement.cpp:45:1: error: control reaches end of non-void function [-Werror=return-type] cc1plus: all warnings being treated as errors If ENABLE(CSS_GRID_LAYOUT) is true, NeverDestroyed.h is included by one of the header files, that's why we didn't notice this error previously. We shouldn't depend on this include, let's include NeverDestroyed.h explicitly, because this cpp needs it.
Attachments
Patch (1.07 KB, patch)
2015-10-19 03:52 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-10-19 03:52:26 PDT
WebKit Commit Bot
Comment 2 2015-10-19 09:10:55 PDT
Comment on attachment 263466 [details] Patch Clearing flags on attachment: 263466 Committed r191289: <http://trac.webkit.org/changeset/191289>
WebKit Commit Bot
Comment 3 2015-10-19 09:10:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.