Fix the !ENABLE(CSS_GRID_LAYOUT) build after r190840 https://bugs.webkit.org/show_bug.cgi?id=150322

Reviewed by Ryosuke Niwa.

* html/HTMLDetailsElement.cpp:


Canonical link: https://commits.webkit.org/168459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191289 268f45cc-cd09-0410-ab3c-d52691b4dbfc