Source/WebCore/html/HTMLDetailsElement.cpp
@@ -32,6 +32,7 @@
 #include "ShadowRoot.h"
 #include "SlotAssignment.h"
 #include "Text.h"
+#include <wtf/NeverDestroyed.h>
 
 namespace WebCore {
 
